add turn total drop it to zero if players rolls a 1

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
       <h3 class="text-center">It is <span class="whoseTurn"></span>'s turn.</h3>
 
       <h2 class="text-center"><span class="lastNumber"></span></h2>
+      <p class="sorry text-center"></p>
       <p class="rolledNumbers text-center"></p>
       <hr>
       <div class="row">
