unify roll and hold buttonsand display whose turn it is.

--- a/index.html
+++ b/index.html
@@ -52,14 +52,16 @@
       <h2 class="text-center"><span class="lastNumber"></span></h2>
       <p class="sorry text-center"></p>
       <p class="rolledNumbers text-center"></p>
+      <div class="text-center">
+        <button id="roll" class="btn btn-lg btn-info">Roll The Die!</button>
+        <button id="hold" class="btn btn-lg btn-danger">Hold</button>
+      </div>
       <hr>
       <div class="row">
         <div class="col-sm-6">
           <h2>Player 1 : <span class=" displayName1"></span></h2>
           <h4>Turn Total: <span id="turnTotal1"></span></h4>
           <h4>Game Total: <span id="gameTotal1"></span></h4>
-          <button id="roll1" class="btn btn-info">Roll The Die!</button>
-          <button id="hold1" class="btn btn-danger" disabled="disabled">Hold</button>
         </div>
 
 
@@ -67,8 +69,6 @@
           <h2>Player 2 : <span class=" displayName2"></span></h2>
           <h4>Turn Total: <span id="turnTotal2"></span></h4>
           <h4>Game Total: <span id="gameTotal2"></span></h4>
-          <button id="roll1" class="btn btn-info" disabled="disabled">Roll The Die!</button>
-          <button id="hold1" class="btn btn-danger" disabled="disabled">Hold</button>
         </div>
       </div>
     </div>
