complete all project specs

--- a/index.html
+++ b/index.html
@@ -15,14 +15,6 @@
               <label for="player1Name">Player 1 Name:</label>
               <input type="text" class="form-control" id="player1Name" required>
             </div>
-            <div class="form-group">
-              <label for="wager1">Wager:</label>
-              <div class="input-group">
-                <div class="input-group-addon">$</div>
-                <input type="text" class="form-control" id="wager1" placeholder="Amount">
-                <div class="input-group-addon">.00</div>
-              </div>
-            </div>
           </div>
 
           <div class="col-sm-6">
@@ -30,18 +22,10 @@
               <label for="player2Name">Player 2 Name:</label>
               <input type="text" class="form-control" id="player2Name" required>
             </div>
-            <div class="form-group">
-              <label for="wager2">Wager:</label>
-              <div class="input-group">
-                <div class="input-group-addon">$</div>
-                <input type="text" class="form-control" id="wager2" placeholder="Amount">
-                <div class="input-group-addon">.00</div>
-              </div>
-            </div>
           </div>
 
         </div>
-        <button class="btn btn-success btn-lg center-block" type="submit">Start new Game</button>
+        <button class="btn btn-success btn-lg center-block newGame" type="submit">Start a New Game</button>
       </form>
 
 <!-- The game display sectio is below: -->
@@ -50,25 +34,25 @@
       <h3 class="text-center">It is <span class="whoseTurn"></span>'s turn.</h3>
 
       <h2 class="text-center"><span class="lastNumber"></span></h2>
+      <h4 class="text-center">Turn Total: <span id="turnTotal">0</span></h4>
       <p class="sorry text-center"></p>
       <p class="rolledNumbers text-center"></p>
+
       <div class="text-center">
         <button id="roll" class="btn btn-lg btn-info">Roll The Die!</button>
         <button id="hold" class="btn btn-lg btn-danger">Hold</button>
       </div>
       <hr>
       <div class="row">
-        <div class="col-sm-6">
-          <h2>Player 1 : <span class=" displayName1"></span></h2>
-          <h4>Turn Total: <span id="turnTotal1"></span></h4>
-          <h4>Game Total: <span id="gameTotal1"></span></h4>
+        <div class="col-sm-6 text-right">
+          <h2>Player 1: <span class=" displayName1"></span></h2>
+          <h4>Score: <span id="gameTotal1">0</span></h4>
         </div>
 
 
         <div class="col-sm-6">
-          <h2>Player 2 : <span class=" displayName2"></span></h2>
-          <h4>Turn Total: <span id="turnTotal2"></span></h4>
-          <h4>Game Total: <span id="gameTotal2"></span></h4>
+          <h2>Player 2: <span class=" displayName2"></span></h2>
+          <h4>Score: <span id="gameTotal2">0</span></h4>
         </div>
       </div>
     </div>
