--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
   <body>
     <div class="container">
       <h1 class="text-center">Let's Play Pig Dice!</h1>
+      <div class="text-center">
+        <p>Each turn, a player repeatedly rolls a die until either a 1 is rolled or the player decides to "hold":</p>
+        <p>If the player rolls a 1, they score nothing and it becomes the next player's turn.</p>
+        <p>If the player rolls any other number, it is added to their turn total and the player's turn continues.</p>
+        <p>If a player chooses to "hold", their turn total is added to their score, and it becomes the next player's turn.</p>
+        <p>The first player to score 100 or more points wins.</p>
+      </div>
+<hr>
       <form id="userInput">
         <div class="row">
           <div class="col-sm-6">
