add two dice functionality (mostly)

--- a/index.html
+++ b/index.html
@@ -33,6 +33,11 @@
           </div>
 
         </div>
+        <div class="checkbox text-center">
+          <label>
+            <input id="twoDice" type="checkbox"> Play With Two Dice
+          </label>
+        </div>
         <button class="btn btn-success btn-lg center-block newGame" type="submit">Start a New Game</button>
       </form>
 
